--- a/styles/index-mobile.css
+++ b/styles/index-mobile.css
@@ -63,7 +63,7 @@
     }
 
     main h1 {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
     
     #certificates_filtered_container {
